# snapraid-runner

./: .gitignore  LICENSE.txt  README.md  apprise.yml.example  setup.cfg  snapraid-runner.conf  snapraid-runner.conf.example  snapraid-runner.py  snapraid.py
snapraid_runner/: SnapraidRunner.py  __init__.py
