[metadata]
name = snapraid_runner
version = attr: snapraid_runner.VERSION
long_description = file: README.md, LICENSE.txt
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
packages = snapraid_runner
python_requires = >=3.7

[options.entry_points]
console_scripts =
    snapraid-runner = snapraid_runner:main